--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,13 @@ body {
 
 .app {
   padding: 8px;
+  h2 {
+    margin: 10px 0;
+    padding: 0;
+    font-size: 20px;
+  }
   .section {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     .row {
       margin-bottom: 10px;
     }
