完成demo的开发

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,5 +18,11 @@ body {
       margin-bottom: 10px;
     }
   }
+  .upload-section {
+    .preview {
+      display: block;
+      max-width: 100%;
+    }
+  }
 }
 
