--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,6 @@ html {
 body {
   font-size: 16px;
 }
-
 .app {
   padding: 8px;
   h2 {
@@ -12,6 +11,12 @@ body {
     padding: 0;
     font-size: 20px;
   }
+  button {
+    background: #EFEFEF;
+    border: 1px solid #767676;
+    border-radius: 2px;
+  }
+
   .section {
     margin-bottom: 20px;
     .row {
